# qml-niri

./: CMakeLists.txt  README.md  justfile
src/: keyboardlayouts.cpp  keyboardlayouts.h  niri.cpp  niri.h  windowmodel.cpp  windowmodel.h  workspacemodel.cpp  workspacemodel.h
test/: test_keyboard.qml  test_windows.qml  test_workspaces.qml
